objects/Approval_Product_Classification__c.object
<CustomObject>
    <fields>
        <fullName>BG_Name__c</fullName>
        <label>BG Name</label>
        <picklist>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EG</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prod_Level__c</fullName>
        <label>Prod Level</label>
        <picklist>
            <picklistValues>
                <fullName>GBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Product Line</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ranking_Type__c</fullName>
        <label>Ranking Type</label>
        <picklist>
            <picklistValues>
                <fullName>Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Approval Product Classification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>BG_Name__c</columns>
        <columns>Prod_Level__c</columns>
        <columns>Ranking_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Approval Product Classification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Product Classifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>